fix: set fixed width (not min-width) for filter button to prevent any layout shift

--- a/src/app/tabs/tab-list/tab-list.page.scss
+++ b/src/app/tabs/tab-list/tab-list.page.scss
@@ -27,10 +27,10 @@
   font-weight: 600;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  min-width: 120px;
+  width: 130px;
 
   @media (min-width: 1024px) {
-    min-width: 140px;
+    width: 160px;
   }
 
   &:hover {
